adds a header with an h1 content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ian Kabaka</title>
+    <link rel="stylesheet" href="" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Ian Kabaka</h1>
+    </header>
+  </body>
 </html>
