--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <header>
       <h1>Ian Kabaka</h1>
+      <nav>
+        <ul>
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <li>item 4</li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
