--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       <h1>Ian Kabaka</h1>
       <nav>
         <ul>
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
-          <li>item 4</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a hef="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
