fixes a bug where I used wrong syntax for an a tag

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <header>
       <h1>Ian Kabaka</h1>
+      <!-- navigation items -->
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="about">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a hef="#contact">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
