adds the div with class of nav-container to group everything and duplicates the ul elements

--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ian Kabaka</title>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="components/navbar.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Ian Kabaka</h1>
       <!-- navigation items -->
-      <nav>
+      <nav class="navbar">
+        <div class="nav-container">
+          <div class="nav-logo">
+            <a href="#home">KABAKADEV</a>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+          </ul>
+        </div>
+
         <ul>
-          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#education">Education</a></li>
