--- a/index.html
+++ b/index.html
@@ -20,26 +20,21 @@
             <li><a href="#home">Home</a></li>
           </ul>
           <ul class="nav-menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
           </ul>
           <ul class="nav-menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#skills">Skills</a></li>
           </ul>
           <ul class="nav-menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#education">Education</a></li>
           </ul>
           <ul class="nav-menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+          </ul>
+          <ul class="nav-menu">
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
       </nav>
     </header>
   </body>
