includes a meta for accessbility and seo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio of Ian Kabaka – showcasing web development."
+    />
     <title>Ian Kabaka</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="components/navbar.css" />
