--- a/index.html
+++ b/index.html
@@ -22,24 +22,15 @@
           </div>
           <ul class="nav-menu">
             <li><a href="#home">Home</a></li>
-          </ul>
-          <ul class="nav-menu">
             <li><a href="#about">About</a></li>
-          </ul>
-          <ul class="nav-menu">
             <li><a href="#skills">Skills</a></li>
-          </ul>
-          <ul class="nav-menu">
             <li><a href="#education">Education</a></li>
-          </ul>
-          <ul class="nav-menu">
             <li><a href="#projects">Projects</a></li>
-          </ul>
-          <ul class="nav-menu">
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
+    <main></main>
   </body>
 </html>
