includes the css files and adds the hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     />
     <title>Ian Kabaka</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="components/navbar.css" />
+    <link rel="stylesheet" href="components/hero.css" />
   </head>
   <body>
     <header class="header">
@@ -31,6 +33,27 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section id="home">
+        <div class="hero-container">
+          <div class="hero-content">
+            <h1 class="hero-title">
+              Hi, I'm <span class="hero-name">Ian Kabaka</span>
+            </h1>
+            <p class="hero-subtitle">
+              Full-Stack Web Developer passionate about creating elegant and
+              functional web experiences
+            </p>
+            <div class="hero-image">
+              <img
+                src="assets/images/profile-photo.png"
+                alt="Ian Kabaka - Web Developer"
+                class="profile-img"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
