--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="components/navbar.css" />
     <link rel="stylesheet" href="components/hero.css" />
+    <link rel="stylesheet" href="components/about.css" />
   </head>
   <body>
     <header class="header">
-      <h1>Ian Kabaka</h1>
       <!-- navigation items -->
       <nav class="navbar">
         <div class="nav-container">
@@ -51,6 +51,29 @@
                 class="profile-img"
               />
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- ========== About Me Section ========== -->
+      <section id="about" class="about">
+        <div class="container">
+          <h2 class="section-title">About Me</h2>
+          <div class="about-content">
+            <p class="about-text">
+              Hi! I'm Ian Kabaka, a passionate web developer with a strong
+              foundation in modern web technologies. I love crafting clean,
+              efficient code and creating user-friendly interfaces that solve
+              real-world problems. My journey in web development started with a
+              curiosity about how websites work, and it has evolved into a deep
+              appreciation for both the technical and creative aspects of
+              building digital experiences.
+            </p>
+            <p class="about-text">
+              When I'm not coding, you can find me exploring new technologies,
+              contributing to open-source projects, or enjoying outdoor
+              activities. I believe in continuous learning and staying
+              up-to-date with the latest industry trends and best practices.
+            </p>
           </div>
         </div>
       </section>
