adds and style skill section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="components/navbar.css" />
     <link rel="stylesheet" href="components/hero.css" />
     <link rel="stylesheet" href="components/about.css" />
+    <link rel="stylesheet" href="components/skills.css" />
   </head>
   <body>
     <header class="header">
@@ -74,6 +75,47 @@
               activities. I believe in continuous learning and staying
               up-to-date with the latest industry trends and best practices.
             </p>
+          </div>
+        </div>
+      </section>
+      <!-- ========== Skills Section ========== -->
+      <section id="skills" class="skills">
+        <div class="container">
+          <h2 class="section-title">Skills & Technologies</h2>
+          <div class="skills-grid">
+            <!-- Skill Category Component -->
+            <div class="skill-category">
+              <h3 class="skill-category-title">Frontend</h3>
+              <div class="skill-items">
+                <span class="skill-item">HTML5</span>
+                <span class="skill-item">CSS3</span>
+                <span class="skill-item">JavaScript</span>
+                <span class="skill-item">React</span>
+                <span class="skill-item">Vue.js</span>
+              </div>
+            </div>
+
+            <div class="skill-category">
+              <h3 class="skill-category-title">Backend</h3>
+              <div class="skill-items">
+                <span class="skill-item">Node.js</span>
+                <span class="skill-item">Python</span>
+                <span class="skill-item">Express.js</span>
+                <span class="skill-item">MongoDB</span>
+                <span class="skill-item">PostgreSQL</span>
+              </div>
+            </div>
+
+            <div class="skill-category">
+              <h3 class="skill-category-title">Tools & Others</h3>
+              <div class="skill-items">
+                <span class="skill-item">Git</span>
+                <span class="skill-item">Docker</span>
+                <span class="skill-item">AWS</span>
+                <span class="skill-item">Figma</span>
+                <span class="skill-item">VS Code</span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
