adds an education section and includes the path to the cv for downloading

--- a/index.html
+++ b/index.html
@@ -113,6 +113,38 @@
           </div>
         </div>
       </section>
+
+      <!-- ========== Education Section ========== -->
+      <section id="education" class="education">
+        <div class="container">
+          <h2 class="section-title">Education</h2>
+          <div class="education-content">
+            <div class="education-item">
+              <div class="education-header">
+                <h3 class="education-degree">
+                  Full-Stack Web Development Bootcamp
+                </h3>
+                <span class="education-year">2023</span>
+              </div>
+              <p class="education-school">Tech Academy</p>
+              <p class="education-description">
+                Intensive 6-month program covering modern web development
+                technologies including React, Node.js, Flask and cloud
+                deployment strategies.
+              </p>
+            </div>
+            <div class="education-cta">
+              <a
+                href="assets/ian_kabaka_cv.pdf"
+                class="btn btn-outline"
+                download
+              >
+                Download Full CV
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
