styles the project section and adds relevant projects done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="components/hero.css" />
     <link rel="stylesheet" href="components/about.css" />
     <link rel="stylesheet" href="components/skills.css" />
+    <link rel="stylesheet" href="components/education.css" />
+    <link rel="stylesheet" href="components/projects.css" />
   </head>
   <body>
     <header class="header">
@@ -142,6 +144,53 @@
                 Download Full CV
               </a>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- ========== Projects Section ========== -->
+      <section id="projects" class="projects">
+        <div class="container">
+          <h2 class="section-title">Featured Projects</h2>
+          <div class="projects-grid">
+            <article class="project-card">
+              <div class="project-image">
+                <img
+                  src="assets/images/flashlearn.png"
+                  alt="Flashcard learning platform"
+                />
+              </div>
+              <div class="project-content">
+                <h3 class="project-title">Flashcard learning platform</h3>
+                <p class="project-description">
+                  A full-featured full-stack learning platform built with React
+                  and Flask. Features include user authentication, deck
+                  creation, flashcard creation, and studying flashcards with
+                  full crud support.
+                </p>
+                <div class="project-tech">
+                  <span class="tech-tag">React</span>
+                  <span class="tech-tag">Python</span>
+                  <span class="tech-tag">PostgreSQL</span>
+                  <span class="tech-tag">REST API architecture</span>
+                </div>
+                <div class="project-links">
+                  <a
+                    href="https://github.com/kabakadev/flashlearn-frontend"
+                    class="project-link"
+                    target="_blank"
+                  >
+                    View Code
+                  </a>
+                  <a
+                    href="https://flashlearn254.netlify.app/"
+                    class="project-link"
+                    target="_blank"
+                  >
+                    Live Demo
+                  </a>
+                </div>
+              </div>
+            </article>
           </div>
         </div>
       </section>
