styles the footer and adds relevant links

--- a/index.html
+++ b/index.html
@@ -195,5 +195,59 @@
         </div>
       </section>
     </main>
+    <!-- ========== Footer ========== -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-info">
+            <h3 class="footer-name">Ian Kabaka</h3>
+            <p class="footer-description">
+              Full-Stack Web Developer passionate about creating amazing digital
+              experiences.
+            </p>
+          </div>
+          <div class="footer-links">
+            <h4 class="footer-title">Quick Links</h4>
+            <ul class="footer-nav">
+              <li><a href="#home" class="footer-link">Home</a></li>
+              <li><a href="#about" class="footer-link">About</a></li>
+              <li><a href="#projects" class="footer-link">Projects</a></li>
+              <li><a href="#contact" class="footer-link">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <h4 class="footer-title">Connect</h4>
+            <div class="social-links">
+              <a
+                href="https://github.com/kabakadev"
+                class="social-link"
+                target="_blank"
+                >GitHub</a
+              >
+              <a
+                href="https://www.linkedin.com/in/ian-kabaka/"
+                class="social-link"
+                target="_blank"
+                >LinkedIn</a
+              >
+              <a
+                href="https://x.com/kabaka_ian"
+                class="social-link"
+                target="_blank"
+                >X</a
+              >
+              <a href="mailto:iankabaka1@email.com" class="social-link"
+                >Email</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p class="footer-copyright">
+            &copy; 2025 Ian Kabaka. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
