cleaned up styled from main css and other css styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       content="Portfolio of Ian Kabaka – showcasing web development."
     />
     <title>Ian Kabaka</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="components/navbar.css" />
@@ -16,6 +23,7 @@
     <link rel="stylesheet" href="components/skills.css" />
     <link rel="stylesheet" href="components/education.css" />
     <link rel="stylesheet" href="components/projects.css" />
+    <link rel="stylesheet" href="components/footer.css" />
   </head>
   <body>
     <header class="header">
@@ -31,7 +39,6 @@
             <li><a href="#skills" class="nav-link">Skills</a></li>
             <li><a href="#education" class="nav-link">Education</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -126,13 +133,12 @@
                 <h3 class="education-degree">
                   Full-Stack Web Development Bootcamp
                 </h3>
-                <span class="education-year">2023</span>
+                <span class="education-year">2024</span>
               </div>
               <p class="education-school">Tech Academy</p>
               <p class="education-description">
                 Intensive 6-month program covering modern web development
-                technologies including React, Node.js, Flask and cloud
-                deployment strategies.
+                technologies including React, Flask and deployment strategies.
               </p>
             </div>
             <div class="education-cta">
