--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
       </nav>
     </header>
     <main>
+      <!-- HERO SECTION -->
       <section id="home">
         <div class="hero-container">
+          <div class="hero-background">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+          </div>
           <div class="hero-content">
             <h1 class="hero-title">
               Hi, I'm <span class="hero-name">Ian Kabaka</span>
@@ -66,6 +73,11 @@
       </section>
       <!-- ========== About Me Section ========== -->
       <section id="about" class="about">
+        <div class="about-background">
+          <div class="shape shape-1"></div>
+          <div class="shape shape-2"></div>
+          <div class="shape shape-3"></div>
+        </div>
         <div class="container">
           <h2 class="section-title">About Me</h2>
           <div class="about-content">
@@ -242,7 +254,7 @@
                 target="_blank"
                 >X</a
               >
-              <a href="mailto:iankabaka1@email.com" class="social-link"
+              <a href="mailto:iankabaka1@gmail.com" class="social-link"
                 >Email</a
               >
             </div>
