--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="components/navbar.css" />
@@ -33,7 +37,8 @@
           <div class="nav-logo">
             <a href="#home">KABAKADEV</a>
           </div>
-          <ul class="nav-menu" role="navigation" aria-label="Main menu">
+          <!-- Desktop Navigation - Text Only -->
+          <ul class="desktop-nav" role="navigation" aria-label="Main menu">
             <li><a href="#home" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -41,6 +46,75 @@
             <li><a href="#projects" class="nav-link">Projects</a></li>
           </ul>
         </div>
+      </nav>
+
+      <!-- Mobile Bottom Navigation - Icons Only -->
+      <nav class="mobile-nav" role="navigation" aria-label="Mobile menu">
+        <a href="#home" class="mobile-nav-item" aria-label="Home">
+          <svg
+            class="mobile-nav-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+            <polyline points="9,22 9,12 15,12 15,22" />
+          </svg>
+        </a>
+
+        <a href="#about" class="mobile-nav-item" aria-label="About">
+          <svg
+            class="mobile-nav-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
+            <circle cx="12" cy="7" r="4" />
+          </svg>
+        </a>
+
+        <a href="#skills" class="mobile-nav-item" aria-label="Skills">
+          <svg
+            class="mobile-nav-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path d="M12 2L2 7l10 5 10-5-10-5z" />
+            <path d="M2 17l10 5 10-5" />
+            <path d="M2 12l10 5 10-5" />
+          </svg>
+        </a>
+
+        <a href="#education" class="mobile-nav-item" aria-label="Education">
+          <svg
+            class="mobile-nav-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path d="M22 10v6M2 10l10-5 10 5-10 5z" />
+            <path d="M6 12v5c3 3 9 3 12 0v-5" />
+          </svg>
+        </a>
+
+        <a href="#projects" class="mobile-nav-item" aria-label="Projects">
+          <svg
+            class="mobile-nav-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
+            <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
+          </svg>
+        </a>
       </nav>
     </header>
 
@@ -144,8 +218,6 @@
                 <span class="skill-item">CSS3</span>
                 <span class="skill-item">JavaScript</span>
                 <span class="skill-item">React</span>
-                <span class="skill-item">SASS</span>
-                <span class="skill-item">Tailwind CSS</span>
               </div>
             </div>
 
@@ -153,10 +225,8 @@
               <h3 class="skill-category-title">Backend</h3>
               <div class="skill-items">
                 <span class="skill-item">Python</span>
-                <span class="skill-item">Node.js</span>
-                <span class="skill-item">Express</span>
                 <span class="skill-item">PostgreSQL</span>
-                <span class="skill-item">MongoDB</span>
+                <span class="skill-item">Flask</span>
               </div>
             </div>
 
@@ -166,9 +236,6 @@
                 <span class="skill-item">Git</span>
                 <span class="skill-item">Docker</span>
                 <span class="skill-item">Figma</span>
-                <span class="skill-item">Webpack</span>
-                <span class="skill-item">AWS</span>
-                <span class="skill-item">CI/CD</span>
               </div>
             </div>
           </div>
@@ -187,28 +254,19 @@
                 </h3>
                 <span class="education-year">2024</span>
               </div>
-              <p class="education-school">Tech Academy</p>
+              <p class="education-school">Moringa School</p>
               <p class="education-description">
                 Intensive 6-month program covering modern web development
                 technologies including React, Flask and deployment strategies.
               </p>
             </div>
 
-            <div class="education-item">
-              <div class="education-header">
-                <h3 class="education-degree">Computer Science Degree</h3>
-                <span class="education-year">2019-2023</span>
-              </div>
-              <p class="education-school">University of Technology</p>
-              <p class="education-description">
-                Comprehensive computer science program focusing on algorithms,
-                data structures, software engineering principles, and web
-                technologies.
-              </p>
-            </div>
-
             <div class="education-cta">
-              <a href="#" class="btn btn-outline" download>
+              <a
+                href="assets/ian_kabaka_cv.pdf"
+                class="btn btn-outline"
+                download
+              >
                 Download Full CV
               </a>
             </div>
@@ -238,10 +296,10 @@
                 </p>
                 <div class="project-tech">
                   <span class="tech-tag">React</span>
-                  <span class="tech-tag">Python</span>
+                  <span class="tech-tag">Flask</span>
                   <span class="tech-tag">PostgreSQL</span>
                   <span class="tech-tag">REST API</span>
-                  <span class="tech-tag">Tailwind CSS</span>
+                  <span class="tech-tag">Material UI</span>
                 </div>
                 <div class="project-links">
                   <a
