fixes a typo on page

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <!-- ========== Projects Section ========== -->
       <section id="projects" class="projects">
         <div class="container">
-          <h2 class="section-title">Featured Projects</h2>
+          <h2 class="section-title">Featured Project</h2>
           <div class="projects-grid">
             <article class="project-card">
               <div class="project-image">
