made a clear CTA for connecting

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </p>
             <div class="hero-cta">
               <a href="#projects" class="btn btn-primary">View My Work</a>
-              <a href="#footer" class="btn btn-secondary">Get In Touch</a>
+              <a href="#footer" class="btn btn-secondary">Let's Connect</a>
             </div>
           </div>
           <div class="hero-image">
