restyles about me section

--- a/index.html
+++ b/index.html
@@ -157,22 +157,37 @@
         <div class="container">
           <h2 class="section-title">About Me</h2>
           <div class="about-content">
-            <p class="about-text">
-              Hi! I'm Ian Kabaka, a passionate web developer with a strong
-              foundation in modern web technologies. I love crafting clean,
-              efficient code and creating user-friendly interfaces that solve
-              real-world problems. My journey in web development started with a
-              curiosity about how websites work, and it has evolved into a deep
-              appreciation for both the technical and creative aspects of
-              building digital experiences.
-            </p>
-            <p class="about-text">
-              When I'm not coding, you can find me exploring new technologies,
-              contributing to open-source projects, or enjoying outdoor
-              activities. I believe in continuous learning and staying
-              up-to-date with the latest industry trends and best practices.
-            </p>
-
+            <div class="about-intro">
+              <p class="about-text">
+                Hey I'm <strong>Ian Kabaka</strong>, a backend-leaning web
+                developer who genuinely enjoys the messier side of building
+                things. <em>Solving bugs? I love it.</em> Debugging is where I
+                thrive, especially when a project starts taking shape and those
+                stubborn errors begin showing up, that's when I zone in,
+                sometimes even forgetting to eat.
+              </p>
+              <p class="about-text">
+                I'm especially drawn to <strong>APIs</strong>. There's just
+                something satisfying about sending a request through Postman and
+                getting that green status ... like watching a cold, static
+                system spark to life. I believe building software should be
+                <em>creative, not rigid</em>. So I'm all for mixing things up
+                beyond the usual vanilla routes.
+              </p>
+              <p class="about-text">
+                I enjoy working with people, especially in collaborative
+                environments like <strong>hackathons</strong> or open projects
+                with a community vibe. I've been told I have an eye for detail
+                ... probably because I love breaking down complex problems and
+                getting things just right.
+              </p>
+              <p class="about-text">
+                Outside of tech, you'll probably find me playing <em>darts</em>,
+                diving into sci-fi worlds, or vibing with my love for freeform
+                dreadlocks... something about them just speaks to the same raw
+                creativity I try to bring into my code.
+              </p>
+            </div>
             <div class="about-grid">
               <div class="about-card">
                 <svg class="icon" viewBox="0 0 24 24">
@@ -205,7 +220,6 @@
           </div>
         </div>
       </section>
-
       <!-- ========== Skills Section ========== -->
       <section id="skills" class="skills">
         <div class="container">
