removes cliche overused phrase and adds more comments to the footer css

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
           <div class="footer-info">
             <h3 class="footer-name">Ian Kabaka</h3>
             <p class="footer-description">
-              Full-Stack Web Developer passionate about creating amazing digital
-              experiences.
+              I build with precision, break things on purpose, and stay curious
+              until the system breathes.
             </p>
           </div>
           <div class="footer-links">
