rewrites the hero message

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
               Hi, I'm <span class="hero-name">Ian Kabaka</span>
             </h1>
             <p class="hero-subtitle">
-              Full-Stack Web Developer passionate about creating elegant and
-              functional web experiences
+              I build systems that work, fix ones that don’t, and enjoy the
+              chaos in between.
             </p>
+
             <div class="hero-cta">
               <a href="#projects" class="btn btn-primary">View My Work</a>
               <a href="#footer" class="btn btn-secondary">Let's Connect</a>
